force-app/main/default/objects/QTB_Customer_Billing_Account_Lookup__c/QTB_Customer_Billing_Account_Lookup__c.object-meta.xml
<CustomObject>
    <label>Customer Billing Account Lookup</label>
    <nameField>
        <displayFormat>CBA - {000000000}</displayFormat>
        <label>QTB Customer Billing Account Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Billing Account Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>