force-app/main/default/objects/QTB_Customer_Billing_Account_Lookup__c/fields/QTB_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Billing Account Lookup</relationshipLabel>
    <relationshipName>QTB_Customer_Billing_Account_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>