force-app/main/default/objects/QTB_Customer_Billing_Account_Lookup__c/fields/QTB_Compound_Key__c.field-meta.xml
<CustomField>
    <fullName>QTB_Compound_Key__c</fullName>
    <label>Compound Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>