force-app/main/default/objects/QTB_Customer_Billing_Account_Lookup__c/fields/QTB_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Customer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipName>QTB_Customer_Billing_Account_Lookup</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>