force-app/main/default/objects/QTB_Customer_Billing_Account_Lookup__c/fields/QTB_Customer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Customer_Account_Name__c</fullName>
    <label>Customer Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>