force-app/main/default/objects/QTB_Customer_Billing_Account_Lookup__c/fields/QTB_IMSight_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_IMSight_Number__c</fullName>
    <label>IMSight Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>