force-app/main/default/objects/QTB_Customer_Billing_Account_Lookup__c/fields/QTB_Pricefx_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>QTB_Pricefx_Customer_ID__c</fullName>
    <label>PriceFX Customer ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>