force-app/main/default/objects/QTB_Customer_Billing_Account_Lookup__c/fields/QTB_Quote__c.field-meta.xml
<CustomField>
    <fullName>QTB_Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SBQQ__Quote__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Quote, Sales Quote - Approved, Sales Quote - In Review</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Customer Billing Account Lookup</relationshipLabel>
    <relationshipName>Customer_Billing_Account_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>