force-app/main/default/objects/QTB_Customer_Billing_Account_Lookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QTB_Customer_Account__c</columns>
    <columns>QTB_Quote__c</columns>
    <columns>QTB_Billing_Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>